# ebug-network

./: Dockerfile  README.md  README_old.md  TODO.md  blink.py  docker.md  mjpeg_error.txt  quick_start.md  raspi_n_laptop_setup.md  temp.txt
CAD/beacon/: Part3c_top.DXF
ROMI Backup Files/: ROMIPIDIntergrated.ino  RomiGyroCalibration.ino  RomiPID.ino  RomiRPiSlaveLED.ino
analysis/: robot_pose_1864847634.txt  trajectory_plot.ipynb
apriltags_localization/src/apriltags_localization/: package.xml  setup.cfg  setup.py
apriltags_localization/src/apriltags_localization/apriltags_localization/: alt_robot_pose.py  apriltag_measure.py  converter.py  poller.py  robot_pose.py  tf_transformations.py
apriltags_localization/src/apriltags_localization/config/: aprilTag.yaml  ekf.yaml  ekf_odom.yaml  static_obstacles.yaml
apriltags_localization/src/apriltags_localization/launch/: raspi_nodes.launch.py  remote_nodes.launch.py
apriltags_localization/src/control/: package.xml  setup.py
apriltags_localization/src/control/control/: a_star_new.py  commander.py  naive_planner.py  obstacle.py  obstacles_manager.py  quartenion.py  robot.py  robot_controller.py  tentacle_planner.py
apriltags_localization/src/obstacles_msg/: CMakeLists.txt  package.xml
apriltags_localization/src/obstacles_msg/msg/: Obstacles.msg  ObstaclesArray.msg
apriltags_localization/src/romi_msg/: CMakeLists.txt  package.xml
apriltags_localization/src/romi_msg/msg/: RomiIn.msg  RomiOut.msg
assets/: boids_test.ipynb
assets/Archive/CAD/beacon/: Part1_side.DXF  Part3b_base.DXF  part1b_side.DXF
assets/CAD/April Tag Stand/: StandAssembly.SLDASM  Standpart1.DXF  Standpart1.SLDPRT  Standpart2.DXF  Standpart2.SLDPRT
assets/CAD/Ebug Body/: ebug_body_Hat.FCStd  ebug_body_LEDMount.FCStd  ebug_body_Pin.FCStd  ebug_body_Tower.FCStd
assets/CAD/Ebug Body/STL Files/: ebug_body_Hat-Fusion.stl  ebug_body_LEDMount_v4.dxf
assets/CAD/camera_chassis/: cam_part_1.DXF  cam_part_2.DXF  cam_part_3.DXF
assets/images/: README.md
calibration/: cam_3.yaml
docs/: Dependencies.md  Deploy Containers.md  Deploy Robot.md  Deploy Server.md  Deploy Visualisation.md  README.md  Setup Gridmap.md  Setup Robot.md  Setup Server.md  Setup Visualiser.md
ebug_ws/src/ebug/: calibration_guide.md  docker.md  quick_ros_commands.txt
ebug_ws/src/ebugnet_ultilities/utilities/: README.md
ebugnet_ws/: README.md
ebugnet_ws/src/ebug/: Dockerfile  apriltag_localization_guide.md  calibration.py  ros2_resources.md  setup_raspi_pololu.md
ebugnet_ws/src/ebug/analysis/: odom_pose_1864847634.txt  robot_pose_1864847634.csv
ebugnet_ws/src/ebug/calibration/: cam1_old.yaml  cam3old.yaml
install/: local_setup.sh  setup.sh
legacy/ebug_fw/: README.md
log/: latest_build
romi/RomiRPISlave/: RomiRPISlave.ino
romi/RomiRPiSlaveLED/: RomiRPiSlaveLED.ino
ros/src/: Dockerfile  README.md  launch  python_requirements.txt  update
ros/src/containers/: Client.Dockerfile
ros/src/ebug/: package.xml  setup.cfg  setup.py
ros/src/ebug_agent/: package.xml  setup.cfg  setup.py
ros/src/ebug_base/: CMakeLists.txt  package.xml
ros/src/ebug_base/include/ebug_base/: byte_rectifier.hpp  camera_controller.hpp  transform_converter.hpp
ros/src/ebug_base/msg/: ControlCommand.msg
ros/src/ebug_base/src/: byte_rectifier.cpp  camera_controller.cpp  gridmap_controller.cpp  jpeg_republisher.cpp  transform_converter.cpp
ros/src/ebug_base/srv/: ComputeTarget.srv
ros/src/ebug_client/: package.xml  setup.py
ros/src/ebug_cpp/: CMakeLists.txt  package.xml
ros/src/ebug_cpp/include/ebug_cpp/: byte_rectifier.hpp  camera_controller.hpp  jpeg_republisher.hpp
ros/src/ebug_cpp/src/: byte_rectifier.cpp  camera_controller.cpp  jpeg_republisher.cpp
ros/src/ebug_hardware/: CMakeLists.txt  README.md  ebug_hardware.xml  package.xml
ros/src/ebug_hardware/include/ebug_hardware/: pololu_diff_drive.hpp  pololu_lights.hpp  pololu_wheel.hpp  romi_i2c_bridge.hpp
ros/src/ebug_hardware/src/: pololu_diff_drive.cpp  romi_i2c_bridge.cpp
ros/src/ebug_interfaces/: CMakeLists.txt  package.xml
ros/src/ebug_principal/: package.xml  setup.py
ros/src/ebug_pseudo/: package.xml  setup.cfg  setup.py
ros/src/ebug_visualisation/: package.xml  setup.cfg  setup.py
ros/src/ebug_visualisation/grid_map/grid_map_mytutorials/: CMakeLists.txt
ros/src/ebug_visualisation/grid_map/grid_map_mytutorials/launch/: mytutorial_demo_launch.py
ros/src/ebug_visualisation/grid_map/grid_map_mytutorials/src/: physical_node.cpp  tf_listener.cpp
ros/src/ebug_visualiser/: package.xml  setup.cfg  setup.py
ros/src/install/: local_setup.sh  setup.sh
ros/src/install/ebug/share/ebug/: package.dsv  package.ps1  package.sh  package.xml
ros/src/install/ebug/share/ebug/config/: ekfAbsolute.yaml  ekfRelative.yaml  gridmap.yaml
ros/src/install/ebug/share/ebug/launch/: gridmap.launch.py  teleop.launch.py  teleoperate.launch.py  visualiser.launch.py
ros/src/install/ebug/share/ebug/rviz/: gridmap.rviz
ros/src/log/: latest_build
ros2_localization/install/: local_setup.sh
ros2_localization/src/control/: setup.py
sim_ws/: Dockerfile  README.md
sim_ws/src/sim_central/: package.xml  setup.cfg  setup.py
src/: Agent.Dockerfile  Client.Dockerfile  Dockerfile  Principal.Dockerfile  README.md  python_requirements.txt  ros_entrypoint.sh
src/ebug_agent/: package.xml  setup.py
src/ebug_agent/config/: ekf.yaml
src/ebug_agent/ebug_agent/: MovementController.py  TransformConverter.py
src/ebug_agent/launch/: ebug_agent.launch.py
src/ebug_client/: package.xml  python_requirements.txt  setup.cfg  setup.py
src/ebug_client/calibration/: cam_1.yaml
src/ebug_client/config/: ekf_odom.yaml
src/ebug_client/ebug_client/: CameraPoller.py  RobotController.py
src/ebug_client/launch/: ebug_client.launch.py
src/ebug_interfaces/: CMakeLists.txt
src/ebug_principal/: package.xml  python_requirements.txt  setup.cfg  setup.py
src/ebug_principal/ebug_principal/: BoidsFunction.py  BoidsService.py  RobotController.py
src/ebug_principal/launch/: ebug_principal.launch.py
utilities/: picam_test_02.py
(+170 files in other folders)
