<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ebug_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mark.diedericks830@gmail.com">markd</maintainer>
  <license>GPL-3.0-only</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  
  <depend>pluginlib</depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
