<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ebug</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mark.diedericks830@gmail.com">markd</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>

  <depend>rviz_default_plugins</depend>
  
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>inputs</depend>

  <depend>grid_map</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_py</depend>
  <depend>tf_transformations</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>image_proc</depend>
  
  <depend>ebug_base</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
